user-refact wip
